# agent-plugin-dev

./: .gitattributes  .gitignore  AGENTS.md  README.md  cleanup-worktrees.ps1  start-sessions.ps1  workspace.json
.claude/: project-issues.toml  project-issues.yml  settings.json
.claude/skills/operations/templates/python-lib/: AGENTS.md  README.md  pyproject.toml
.claude/skills/operations/templates/python-lib/.github/workflows/: release.yml  ticket.yml
.claude/skills/operations/templates/python-lib/.serena/: project.yml
.claude/skills/operations/templates/python-lib/.seretos/: projects.yml
.claude/skills/operations/templates/python-lib/src/{{package_name}}/: __init__.py
.claude/skills/operations/templates/python-lib/tests/: test_smoke.py
.claude/skills/operations/templates/python-mcp/: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml  {{short_name}}.spec
.claude/skills/operations/templates/python-mcp/.claude-plugin/: plugin.json
.claude/skills/operations/templates/python-mcp/.codex-plugin/: plugin.json
.claude/skills/operations/templates/python-mcp/.github/workflows/: dispatch.yml  release.yml  test.yml
.claude/skills/operations/templates/python-mcp/.seretos/: projects.yml
.claude/skills/operations/templates/python-mcp/scripts/: build.ps1
.claude/skills/operations/templates/python-mcp/src/{{package_name}}/: __main__.py  server.py
.claude/skills/operations/templates/python-mcp/tests/: test_smoke.py
.serena/: .reminder-state.json  project.yml
.seretos/: project-issues.yml  projects.yml
dev-test/: AGENTS.md
scripts/: init.ps1  (+1 more)
(+36 files in other folders)
