[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{lib_name}}"
version = "0.1.0"
description = "{{description}}"
requires-python = ">=3.11"
authors = [{ name = "{{author_name}}" }]
# Runtime deps go here. Keep the surface small — this is a leaf dependency
# consumed by other projects. Empty by default.
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
