[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{package_name}}"
version = "0.0.0"
description = "{{description}}"
requires-python = ">=3.11"
authors = [{ name = "{{author_name}}" }]
dependencies = [
  "mcp>=1.2",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10",
]
test = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
